# elm-bot

./: .gitignore  README.md  elm-bot.cabal  elm-bot.init  stack.yaml
src/: ElmBot.hs  Main.hs  Slash.hs
