name:                elm-bot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/elm-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable elm-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.2 && < 5
                     , elm-repl
                     , silently
                     , linklater
                     , warp
                     , text
                     , base-prelude
                     , lens
                     , aeson
                     , containers
                     , http-types
                     , wai
                     , wreq
                     , bytestring
                     , wai-extra
